# fuse2

./: .gitignore  README.md
.github/: copilot-instructions.md
.omx/: metrics.json  notepad.md
.omx/logs/: omx-2026-04-03.jsonl  (+4 more)
docs/: fuse-cli-implementation.md  fuse-hardening-plan.md  fuse-implementation-plan-2.md  fuse-interfaces-spec.md  fuse-language-guide-2.md  fuse-post-stage2.md  fuse-pre-stage2.md  fuse-repository-layout-2.md  fuse-stage2-parity-plan.md  fuse-stage2-plan.md  fuse-stage2-test-plan.md  fuse-stdlib-implementation-plan.md  fuse-stdlib-spec.md  fuse-tooling-spec.md  fusec-cli-spec.md  learning.md  stdlib-interfaces-plan.md  stdlib_implementation_learning.md  t4-parity-investigation.md
stage0/: README.md  requirements.txt
stage1/: Cargo.toml  hardening.md  package_stage1.py
stage1/cranelift-ffi/: Cargo.toml
stage1/cranelift-ffi/src/: lib.rs
stage1/cranelift-ffi/tests/: smoke.rs
stage1/fuse-runtime/: Cargo.toml
stage1/fuse-runtime/src/: asap.rs  builtins.rs  chan.rs  lib.rs  shared.rs  simd.rs  string_ops.rs  value.rs
stage1/fusec/: Cargo.toml
stage1/fusec/src/: autogen.rs  color.rs  common.rs  error.rs  evaluator.rs  fstring.rs  lib.rs  main.rs
stage1/fusec/src/ast/: mod.rs  nodes.rs
stage1/fusec/src/checker/: builtins.rs  exhaustiveness.rs  mod.rs  ownership.rs  types.rs
stage1/fusec/src/codegen/: cranelift.rs  layout.rs  mod.rs  object_backend.rs  type_names.rs  wasm_backend.rs
stage1/fusec/src/hir/: lower.rs  mod.rs  nodes.rs
stage1/fusec/src/lexer/: lexer.rs  mod.rs  token.rs
stage1/fusec/src/parser/: mod.rs  parser.rs
stage1/fusec/tests/: check_core_suite.rs  check_full_suite.rs  cli_suite.rs  compile_output_suite.rs  determinism_suite.rs  full_smoke_suite.rs  harness.rs  stage2_bootstrap.rs  stage2_core_suite.rs  wasi_suite.rs
(+778 files in other folders)
