[package]
name = "cranelift-ffi"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
cranelift-codegen = "0.129.1"
cranelift-frontend = "0.129.1"
cranelift-module = "0.129.1"
cranelift-native = "0.129.1"
cranelift-object = "0.129.1"
fuse-runtime = { path = "../fuse-runtime" }
target-lexicon = "0.12"
