[package]
name = "fuse-runtime"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
ureq = { version = "2", features = ["tls"] }
regex = "1"
toml = "0.8"
serde_yaml = "0.9"
sha2 = "0.10"
hmac = "0.12"
md-5 = "0.10"
blake3 = "1"
getrandom = "0.2"
tiny_http = "0.12"
