[package]
name = "fusec"
version = "0.1.0"
edition = "2024"

[dependencies]
fuse-runtime = { path = "../fuse-runtime" }
cranelift-ffi = { path = "../cranelift-ffi" }
cranelift-codegen = "0.129.1"
cranelift-frontend = "0.129.1"
cranelift-jit = "0.129.1"
cranelift-module = "0.129.1"
cranelift-native = "0.129.1"
cranelift-object = "0.129.1"
ureq = { version = "2", features = ["tls"] }
regex = "1"
